# eflect

./: .gitignore  .gitmodules  Cargo.toml  README.md  WORKSPACE  build.rs  eflect_defs.bzl  eflect_deps.bzl  pom.xml
client/: BUILD  Client.java  README.md  client.py  harness.py  processing.py  requirements.txt
experiments/: BUILD  DaCapo.java  EflectCalmnessMonitor.java  EflectProfiler.java  LabelImage.java  WORKSPACE  eflect_experiment_defs.bzl  eflect_experiment_deps.bzl
experiments/benchmarks/: BUILD  EflectBenchmark.java  EflectProfiler.java  EflectResult.java
experiments/experiments/: BUILD  DaCapo.java  EflectCalmnessMonitor.java  EflectMonitor.java  LabelImage.java  TensorflowDriver.java  TensorflowSavedModelDriver.java  TfDriver.java  WrittenDaCapo.java
experiments/scripts/: dacapo-same-experiment.sh  dacapo-same.sh  dacapo.sh  tensorflow-same.sh  tensorflow.sh
java-vanilla/eflect/: BUILD  DummyEflect.java  Eflect.java
java/eflect/: BUILD  CpuFreqMonitor.java  DummyEflect.java  Eflect.java  EflectCollector.java  EflectProcessMonitor.java  EflectSampleCollector.java  JiffiesCollector.java  LinuxEflect.java  LinuxRaplAsyncEflect.java  LinuxRaplEflect.java  LinuxWriter.java  ProcRaplSampleCollector.java
javatests/eflect/: BUILD  EflectTest.java
processing/: __main__.py
profiler/calmness/: BUILD  CalmnessModule.java  CalmnessProfiler.java
profiler/chappie/: BUILD  Chappie.java  Eflect.java  StackTraceRanker.java
profiler/eflect/: BUILD  (+6 more)
python/: README.md
src/: android_trace.rs  client.rs  server.rs
tools/: BUILD  to_footprint.py
(+239 files in other folders)
