[package]
name = "eflect"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.3"
ctrlc = "3"
env_logger = "0.9.0"
log = "0.4"

procfs = "0.10.1"
nvml-wrapper = "0.7.0"

bytes = "1.1.0"
prost = "0.9"
prost-types = "0.9"
tonic = "0.6.2"
tokio = {version = "1.0", features = ["rt-multi-thread"]}

serde = {version="1.0", features=["rc"]}
serde_derive = "1.0"
serde_json = "1.0"

android_trace_log = "0.2.0"

wild = "2.0.4"

[build-dependencies]
tonic-build = "0.6.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "android-trace"
path = "src/android_trace.rs"
